[MPIR-295] Enhancements on dependency convergence report
Submitted by: Simon Wang <wangyf2010@gmail.com>
From: https://github.com/apache/maven-plugins/pull/23

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1601206 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_cs.properties
+++ b/src/main/resources/project-info-report_cs.properties
@@ -110,7 +110,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = Nem\u00e1te
 report.dependency-convergence.stats.readyrelease.error.snapshots   = M\u00e1te sn\u00edmkov\u00e9 z\u00e1vislosti.
 report.dependency-convergence.stats.readyrelease.success           = \u00dasp\u011bch
 report.dependency-convergence.stats.snapshots                      = Po\u010det sn\u00edmkov\u00fdch artefakt\u016f (NOS):
-report.dependency-convergence.stats.subprojects                    = Po\u010det podprojekt\u016f:
+report.dependency-convergence.stats.modules                        = Po\u010det podprojekt\u016f:
 report.dependency-convergence.title                                = Reaktor sbli\u017eov\u00e1n\u00ed z\u00e1vislost\u00ed
 report.dependency-info.name                                        = Informace o z\u00e1vislosti
 report.dependency-info.title                                       = Informace o z\u00e1vislosti
