--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -93,30 +93,34 @@ report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Archiv-Orte der Abh\u00e4ngigkeiten
 report.dependencies.title                                          = Abh\u00e4ngigkeiten
 report.dependencies.unamed                                         = Namenlos
-report.dependencies.transitive.intro                               = Es folgen die transitiven Abh\u00e4ngigkeiten dieses Projektes. Transitive Abh\u00e4ngigkeiten sind Abh\u00e4ngigkeiten der nicht transitiven Abh\u00e4ngigkeiten:
+report.dependencies.transitive.intro                               = Es folgen die transitiven Abh\u00e4ngigkeiten dieses Projektes. Transitive Abh\u00e4ngigkeiten sind Abh\u00e4ngigkeiten der Projektabh\u00e4ngigkeiten:
 report.dependencies.transitive.nolist                              = Dieses Projekt hat keine transitiven Abh\u00e4ngigkeiten.
 report.dependencies.transitive.title                               = Transitive Abh\u00e4ngigkeiten dieses Projektes
-report.dependency-convergence.convergence.caption                  = In Unter-Projekten verwendete Abh\u00e4ngigkeiten
+report.dependency-convergence.convergence.caption                  = In Modulen verwendete Abh\u00e4ngigkeiten
+report.dependency-convergence.convergence.single.caption           = In diesem Projekt verwendete Abh\u00e4ngigkeiten
 report.dependency-convergence.description                          = Dieses Dokument informiert \u00fcber die Konvergenz der Versionen von Abh\u00e4ngigkeiten des gesamten Projektes inklusive seiner Module.
 report.dependency-convergence.legend                               = Legende:
-report.dependency-convergence.legend.different                     = Mindestens ein Projekt verwendet eine andere Version der Abh\u00e4ngigkeit.
-report.dependency-convergence.legend.shared                        = Alle Projekte verwenden dieselbe Version der Abh\u00e4ngigkeit.
+report.dependency-convergence.legend.different                     = Mindestens eine Abh\u00e4ngigkeit verwendet eine andere Version der Abh\u00e4ngigkeit oder hat SNAPSHOT-Abh\u00e4ngigkeiten.
+report.dependency-convergence.legend.shared                        = Alle Module/Abh\u00e4ngigkeiten verwenden dieselbe Version der Abh\u00e4ngigkeit.
 report.dependency-convergence.name                                 = Konvergenz der Abh\u00e4ngigkeiten
+report.dependency-convergence.reactor.name                         = Konvergenz der Reaktorabh\u00e4ngigkeiten
+report.dependency-convergence.reactor.title                        = Konvergenz der Reaktorabh\u00e4ngigkeiten
 report.dependency-convergence.stats.artifacts                      = Anzahl eindeutiger Artefakte (NOA):
 report.dependency-convergence.stats.caption                        = Statistik:
 report.dependency-convergence.stats.convergence                    = Konvergenz (NOD/NOA):
 report.dependency-convergence.stats.dependencies                   = Anzahl Abh\u00e4ngigkeiten (NOD):
-report.dependency-convergence.stats.readyrelease                   = Bereit zur Ver\u00f6ffentlichung (100% Konvergenz und keine SNAPSHOTS):
+report.dependency-convergence.stats.readyrelease                   = Bereit zur Ver\u00f6ffentlichung (100 % Konvergenz und keine SNAPSHOTS):
 report.dependency-convergence.stats.readyrelease.error             = Fehler
-report.dependency-convergence.stats.readyrelease.error.convergence = Keine 100% Konvergenz.
-report.dependency-convergence.stats.readyrelease.error.snapshots   = SNAPSHOT Abh\u00e4ngigkeiten.
+report.dependency-convergence.stats.readyrelease.error.convergence = Keine 100 %ige Konvergenz.
+report.dependency-convergence.stats.readyrelease.error.snapshots   = SNAPSHOT-Abh\u00e4ngigkeiten.
 report.dependency-convergence.stats.readyrelease.success           = Erfolg
+report.dependency-convergence.stats.conflicting                    = Anzahl Artefakte mit Versionskonflikten (NOC):
 report.dependency-convergence.stats.snapshots                      = Anzahl SNAPSHOT-Artefakte (NOS):
-report.dependency-convergence.stats.subprojects                    = Anzahl Unter-Projekte:
+report.dependency-convergence.stats.modules                        = Anzahl Module:
+report.dependency-convergence.title                                = Konvergenz der Abh\u00e4ngigkeiten
 report.dependency-info.name                                        = Abh\u00e4ngigkeiten Information
 report.dependency-info.title                                       = Abh\u00e4ngigkeiten Information
 report.dependency-info.description                                 = In diesem Dokument sind Informationen enthalten, wie dieses Projekt als Abh\u00e4ngigkeit zu anderen Dependency-Management-Tools hinzugef\u00fcgt werden kann.
-report.dependency-convergence.title                                = Reaktor-Abh\u00e4ngigkeitskonvergenz
 report.index.nodescription                                         = Derzeit existiert keine Beschreibung f\u00fcr dieses Projekt.
 report.index.title                                                 = Willkommen bei
 report.issuetracking.bugzilla.intro                                = Dieses Projekt verwendet {Bugzilla, http://www.bugzilla.org/}.
