--- a/src/main/resources/project-info-report_es.properties
+++ b/src/main/resources/project-info-report_es.properties
@@ -110,7 +110,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = No alcanzas
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Tienes dependencias SNAPSHOT.
 report.dependency-convergence.stats.readyrelease.success           = \u00c9xito
 report.dependency-convergence.stats.snapshots                      = N\u00famero de Artefactos SNAPSHOT  (NDS):
-report.dependency-convergence.stats.subprojects                    = N\u00famero de Subproyectos:
+report.dependency-convergence.stats.modules                        = N\u00famero de Subproyectos:
 report.dependency-convergence.title                                = Convergencia de Dependencias en el Reactor
 report.dependency-info.name                                        = Informaci\u00f3n de Dependencias
 report.dependency-info.title                                       = Informaci\u00f3n de Dependencias
