--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -110,7 +110,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = Vous n'avez
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Vous avez des d\u00e9pendances de type SNAPSHOT.
 report.dependency-convergence.stats.readyrelease.success           = Succ\u00e8s
 report.dependency-convergence.stats.snapshots                      = Nombre d'artefacts SNAPSHOT (NOS):
-report.dependency-convergence.stats.subprojects                    = Nombre de sous-projets:
+report.dependency-convergence.stats.modules                        = Nombre de sous-projets:
 report.dependency-convergence.title                                = R\u00e9action de la convergence des d\u00e9pendances
 report.dependency-info.name                                        = Informations de d\u00e9pendance
 report.dependency-info.title                                       = Informations de d\u00e9pendance
