--- a/src/main/resources/project-info-report_gl.properties
+++ b/src/main/resources/project-info-report_gl.properties
@@ -104,7 +104,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = Non alcanza
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Tes dependencias SNAPSHOT.
 report.dependency-convergence.stats.readyrelease.success           = \u00c9xito
 report.dependency-convergence.stats.snapshots                      = N\u00famero de Artefactos SNAPSHOT  (NDS):
-report.dependency-convergence.stats.subprojects                    = N\u00famero de Subproxectos:
+report.dependency-convergence.stats.modules                        = N\u00famero de Subproxectos:
 report.dependency-convergence.title                                = Converxencia de Dependecias no Reactor
 report.index.nodescription                                         = A\u00EDnda non se escribiu unha descrici\u00F3n para este proxecto.
 report.index.title                                                 = Benvido a
