--- a/src/main/resources/project-info-report_hu.properties
+++ b/src/main/resources/project-info-report_hu.properties
@@ -76,7 +76,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = A konvergen
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Nincsenek SNAPSHOT f\u00fcgg\u0151s\u00e9gek.
 report.dependency-convergence.stats.readyrelease.success           = Siker
 report.dependency-convergence.stats.snapshots                      = Snapshot-ok sz\u00e1ma(Number of SNAPSHOT artifacts, NOS)
-report.dependency-convergence.stats.subprojects                    = Al-projektek sz\u00e1ma
+report.dependency-convergence.stats.modules                        = Al-projektek sz\u00e1ma
 report.dependency-convergence.title                                = F\u00fcgg\u0151s\u00e9gek
 report.index.nodescription                                         = A projektr\u0151l nincs le\u00edr\u00e1s.
 report.index.title                                                 = A projektr\u0151l
