--- a/src/main/resources/project-info-report_ja.properties
+++ b/src/main/resources/project-info-report_ja.properties
@@ -76,7 +76,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = \u4E00\u81F
 report.dependency-convergence.stats.readyrelease.error.snapshots   = \u30B9\u30CA\u30C3\u30D7\u30B7\u30E7\u30C3\u30C8\u4F9D\u5B58\u95A2\u4FC2\u304C\u4F7F\u308F\u308C\u3066\u3044\u307E\u3059\u3002
 report.dependency-convergence.stats.readyrelease.success           = \u6210\u529F
 report.dependency-convergence.stats.snapshots                      = \u30B9\u30CA\u30C3\u30D7\u30B7\u30E7\u30C3\u30C8\u30A2\u30FC\u30C6\u30A3\u30D5\u30A1\u30AF\u30C8\u306E\u6570 (NOS):
-report.dependency-convergence.stats.subprojects                    = \u30B5\u30D6\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306E\u6570:
+report.dependency-convergence.stats.modules                        = \u30B5\u30D6\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306E\u6570:
 report.dependency-convergence.title                                = \u30EA\u30A2\u30AF\u30BF\u306E\u4F9D\u5B58\u95A2\u4FC2\u306E\u4E00\u81F4\u5EA6
 report.index.nodescription                                         = \u3053\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306B\u3064\u3044\u3066\u306E\u8AAC\u660E\u306F\u73FE\u5728\u7528\u610F\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 report.index.title                                                 = \u3053\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306B\u3064\u3044\u3066
