--- a/src/main/resources/project-info-report_ko.properties
+++ b/src/main/resources/project-info-report_ko.properties
@@ -98,7 +98,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = 100% \uc9d1
 report.dependency-convergence.stats.readyrelease.error.snapshots   = \uc2a4\ub0c5\uc0f7 \uc758\uc874\ubb3c\uc774 \uc788\uc2b5\ub2c8\ub2e4.
 report.dependency-convergence.stats.readyrelease.success           = \uc131\uacf5
 report.dependency-convergence.stats.snapshots                      = \uc2a4\ub0c5\uc0f7 \uc0b0\ucd9c\ubb3c \uac1c\uc218 (NOS):
-report.dependency-convergence.stats.subprojects                    = \ud558\uc704 \ud504\ub85c\uc81d\ud2b8 \uac1c\uc218:
+report.dependency-convergence.stats.modules                        = \ud558\uc704 \ud504\ub85c\uc81d\ud2b8 \uac1c\uc218:
 report.dependency-convergence.title                                = \ubc18\uc751\uc790 \uc758\uc874\ubb3c \uc9d1\uc911 (Reactor Dependency Convergence)
 report.index.nodescription                                         = \uc774 \ud504\ub85c\uc81d\ud2b8\uc640 \uad00\ub828\ub41c \uc124\uba85\uc774 \ud604\uc7ac \uc5c6\uc2b5\ub2c8\ub2e4.
 report.index.title                                                 = \uc815\ubcf4
