--- a/src/main/resources/project-info-report_lt.properties
+++ b/src/main/resources/project-info-report_lt.properties
@@ -107,7 +107,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = N\u0117ra 1
 report.dependency-convergence.stats.readyrelease.error.snapshots   = J\u016bs turite SNAPSHOT priklausomybi\u0173.
 report.dependency-convergence.stats.readyrelease.success           = S\u0117kmingai
 report.dependency-convergence.stats.snapshots                      = SNAPSHOT artefakt\u0173 skai\u010dius (NOS):
-report.dependency-convergence.stats.subprojects                    = Sub-project\u0173 skai\u010dius:
+report.dependency-convergence.stats.modules                        = Sub-project\u0173 skai\u010dius:
 report.dependency-convergence.title                                = Reaktori\u0173 priklausomybi\u0173 konvergencijos
 report.index.nodescription                                         = \u0160iuo metu n\u0117ra apra\u0161ymo, susijusio su \u0161iuo projektu.
 report.index.title                                                 = Apie
