--- a/src/main/resources/project-info-report_no.properties
+++ b/src/main/resources/project-info-report_no.properties
@@ -78,7 +78,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = Du har ikke
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Du har SNAPSHOT avhengigheter
 report.dependency-convergence.stats.readyrelease.success           = Suksess
 report.dependency-convergence.stats.snapshots                      = Antall SNAPSHOT artifakter (NOS):
-report.dependency-convergence.stats.subprojects                    = Antall sub prosjekter:
+report.dependency-convergence.stats.modules                        = Antall sub prosjekter:
 report.dependency-convergence.title                                = Reactor Avhengighets sammenfall
 report.index.nodescription                                         = Det er for \u00F8yeblikket inegn beskrivelse forbundet med dette prosjektet.
 report.index.title                                                 = Om
