--- a/src/main/resources/project-info-report_pt_BR.properties
+++ b/src/main/resources/project-info-report_pt_BR.properties
@@ -108,7 +108,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = Voc\u00ea n
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Voc\u00ea tem depend\u00eancias SNAPSHOT.
 report.dependency-convergence.stats.readyrelease.success           = Sucesso
 report.dependency-convergence.stats.snapshots                      = Numero de artefatos SNAPSHOT (NOS):
-report.dependency-convergence.stats.subprojects                    = Numero de subprojetos:
+report.dependency-convergence.stats.modules                        = Numero de subprojetos:
 report.dependency-convergence.title                                = Converg\u00eancia de vers\u00e3o de depend\u00eancia
 report.dependencyManagement.column.artifactId                      = ArtifactId
 report.dependencyManagement.column.classifier                      = Classificador
