--- a/src/main/resources/project-info-report_ru.properties
+++ b/src/main/resources/project-info-report_ru.properties
@@ -109,7 +109,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = \u0423 \u04
 report.dependency-convergence.stats.readyrelease.error.snapshots   = \u0423 \u0412\u0430\u0441 \u0438\u043c\u0435\u044e\u0442\u0441\u044f SNAPSHOT \u0437\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0438.
 report.dependency-convergence.stats.readyrelease.success           = \u0423\u0441\u043f\u0435\u0445
 report.dependency-convergence.stats.snapshots                      = \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e SNAPSHOT \u0430\u0440\u0442\u0438\u0444\u0430\u043a\u0442\u043e\u0432 (NOS):
-report.dependency-convergence.stats.subprojects                    = \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0441\u0443\u0431-\u043f\u0440\u043e\u0435\u043a\u0442\u043e\u0432:
+report.dependency-convergence.stats.modules                        = \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0441\u0443\u0431-\u043f\u0440\u043e\u0435\u043a\u0442\u043e\u0432:
 report.dependency-convergence.title                                = \u0420\u0435\u0430\u043a\u0442\u043e\u0440 \u041a\u043e\u043d\u0432\u0435\u0440\u0433\u0435\u043d\u0446\u0438\u0438 \u0417\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0435\u0439
 report.index.nodescription                                         = \u0423 \u044d\u0442\u043e\u0433\u043e \u043f\u0440\u043e\u0435\u043a\u0442\u0430 \u043e\u043f\u0438\u0441\u0430\u043d\u0438\u044f \u043f\u043e\u043a\u0430 \u043d\u0435\u0442.
 report.index.title                                                 = \u0421\u043f\u0440\u0430\u0432\u043a\u0430
