--- a/src/main/resources/project-info-report_sk.properties
+++ b/src/main/resources/project-info-report_sk.properties
@@ -98,7 +98,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = Nem\u00e1te
 report.dependency-convergence.stats.readyrelease.error.snapshots   = M\u00e1te SNAPSHOT z\u00e1vislosti.
 report.dependency-convergence.stats.readyrelease.success           = V poriadku
 report.dependency-convergence.stats.snapshots                      = Po\u010det SNAPSHOT artefaktov (PSA)
-report.dependency-convergence.stats.subprojects                    = Po\u010det podprojektov
+report.dependency-convergence.stats.modules                        = Po\u010det podprojektov
 report.dependency-convergence.title                                = Konvergencia z\u00e1vislost\u00ed
 report.index.nodescription                                         = Projekt nem\u00e1 moment\u00e1lne \u017eiadny popis.
 report.index.title                                                 = Inform\u00e1cie
