--- a/src/main/resources/project-info-report_sv.properties
+++ b/src/main/resources/project-info-report_sv.properties
@@ -108,7 +108,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = Konvergense
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Det finns beroenden p\u00e5 SNAPSHOTs.
 report.dependency-convergence.stats.readyrelease.success           = Framg\u00e5ng
 report.dependency-convergence.stats.snapshots                      = Antal SNAPSHOT artefakter (Number of SNAPSHOTs, NOS):
-report.dependency-convergence.stats.subprojects                    = Antal underprojekt:
+report.dependency-convergence.stats.modules                        = Antal underprojekt:
 report.dependency-convergence.title                                = Beroendekonvergens fr\u00e5n Reactor
 report.dependency-info.name                                        = Beroendeinformation
 report.dependency-info.title                                       = Beroendeinformation
