--- a/src/main/resources/project-info-report_tr.properties
+++ b/src/main/resources/project-info-report_tr.properties
@@ -98,7 +98,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = You do not 
 report.dependency-convergence.stats.readyrelease.error.snapshots   = You have SNAPSHOT dependencies.
 report.dependency-convergence.stats.readyrelease.success           = Success
 report.dependency-convergence.stats.snapshots                      = Number of SNAPSHOT artifacts (NOS):
-report.dependency-convergence.stats.subprojects                    = Number of sub-projects:
+report.dependency-convergence.stats.modules                        = Number of sub-projects:
 report.dependency-convergence.title                                = Reactor Dependency Convergence
 report.index.nodescription                                         = There is currently no description associated with this project.
 report.index.title                                                 = About
