--- a/src/main/resources/project-info-report_zh_CN.properties
+++ b/src/main/resources/project-info-report_zh_CN.properties
@@ -98,7 +98,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = \u4F60\u672
 report.dependency-convergence.stats.readyrelease.error.snapshots   = \u4F60\u4F7F\u7528\u4E86\u5FEB\u7167\u7248\u672C\u7684\u4F9D\u8D56\u3002
 report.dependency-convergence.stats.readyrelease.success           = \u6210\u529F
 report.dependency-convergence.stats.snapshots                      = \u5FEB\u7167\u7248\u672C\u7684artifact\u6570\u76EE(NOS):
-report.dependency-convergence.stats.subprojects                    = \u5B50\u9879\u76EE\u7684\u6570\u76EE:
+report.dependency-convergence.stats.modules                        = \u5B50\u9879\u76EE\u7684\u6570\u76EE:
 report.dependency-convergence.title                                = \u5806\u5F0F\u4F9D\u8D56\u4E00\u81F4\u6027(Reactor Dependency Convergence)
 report.index.nodescription                                         = \u76EE\u524D\u6CA1\u6709\u5BF9\u672C\u9879\u76EE\u7684\u63CF\u8FF0\u3002
 report.index.title                                                 = \u6B22\u8FCE\u6765\u5230
