--- a/src/main/resources/project-info-report_zh_TW.properties
+++ b/src/main/resources/project-info-report_zh_TW.properties
@@ -107,7 +107,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = \u6c92\u670
 report.dependency-convergence.stats.readyrelease.error.snapshots   = \u6709\u5feb\u7167\u7248 (Snapshot) \u7684\u4f9d\u8cf4\u3002
 report.dependency-convergence.stats.readyrelease.success           = \u6210\u529f (Success)
 report.dependency-convergence.stats.snapshots                      = \u5feb\u7167\u7248\u672c artifacts \u7684\u6578\u76ee (NOS)\uff1a
-report.dependency-convergence.stats.subprojects                    = \u5b50\u5c08\u6848\u7684\u6578\u76ee\uff1a
+report.dependency-convergence.stats.modules                        = \u5b50\u5c08\u6848\u7684\u6578\u76ee\uff1a
 report.dependency-convergence.title                                = \u53cd\u61c9\u5806\u5f0f\u4f9d\u8cf4\u805a\u5408\u6027 (Reactor Dependency Convergence)
 report.index.nodescription                                         = \u73fe\u5728\u6c92\u6709\u548c\u672c\u5c08\u6848\u76f8\u95dc\u7684\u4efb\u4f55\u63cf\u8ff0\u3002
 report.index.title                                                 = \u95dc\u65bc (About)
