--- a/src/main/resources/project-info-report_pt.properties
+++ b/src/main/resources/project-info-report_pt.properties
@@ -109,7 +109,7 @@ report.dependency-convergence.stats.readyrelease.error.convergence = N\u00e3o te
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Tem depend\u00eancias SNAPSHOT.
 report.dependency-convergence.stats.readyrelease.success           = Sucesso
 report.dependency-convergence.stats.snapshots                      = Numero de artefactos SNAPSHOT (NOS):
-report.dependency-convergence.stats.subprojects                    = Numero de subprojectos:
+report.dependency-convergence.stats.modules                        = Numero de subprojectos:
 report.dependency-convergence.title                                = Converg\u00eancia da Vers\u00e3o da Depend\u00eancia
 report.index.nodescription                                         = Actualmente, n\u00e3o h\u00e1 uma descri\u00e7\u00e3o atribu\u00edda a este projecto.
 report.index.title                                                 = Sobre
