[MPIR-298] Continuous Integration support for Travis CI  - Applied patch of Philippe Marschall.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1637666 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Dieses Proj
 report.cim.hudson.intro                                            = Dieses Projekt verwendet {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Dieses Projekt verwendet {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Dieses Projekt verwendet {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Dieses Projekt verwendet {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Continuous-Integration
 report.cim.nocim                                                   = Es wurde kein System zur kontinuierlichen Integration definiert.
 report.cim.notifiers.column.address                                = Adresse
