--- a/src/main/resources/project-info-report_es.properties
+++ b/src/main/resources/project-info-report_es.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Este proyec
 report.cim.hudson.intro                                            = Este proyecto usa {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Este proyecto usa {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Este proyecto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Este proyecto usa {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Integraci\u00f3n Continua
 report.cim.nocim                                                   = No hay ning\u00fan sistema de integraci\u00f3n continua definido. Compruebe de nuevo dentro de algunos d\u00edas.
 report.cim.notifiers.column.address                                = Direcci\u00f3n
