--- a/src/main/resources/project-info-report_gl.properties
+++ b/src/main/resources/project-info-report_gl.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Este proxec
 report.cim.hudson.intro                                            = Este proxecto usa {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Este proxecto usa {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Este proxecto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Este proxecto usa {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Integraci\u00f3n Continua
 report.cim.nocim                                                   = Non hai ning\u00fan sistema de integraci\u00f3n continua definido. Comprobe de novo dentro dalg\u00FAns d\u00edas.
 report.cim.notifiers.column.address                                = Direcci\u00f3n
