--- a/src/main/resources/project-info-report_hu.properties
+++ b/src/main/resources/project-info-report_hu.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = A projekt C
 report.cim.hudson.intro                                            = Ez a projekt {Hudson, http://hudson-ci.org/} rendszert haszn\u00C3\u00A1l.
 report.cim.jenkins.intro                                           = Ez a projekt {Jenkins, https://jenkins-ci.org/} rendszert haszn\u00C3\u00A1l.
 report.cim.luntbuild.intro                                         = Ez a projekt {Luntbuild, http://luntbuild.javaforge.com/} rendszert haszn\u00C3\u00A1l.
+report.cim.travis.intro                                            = Ez a projekt {Travis CI, https://travis-ci.org/} rendszert haszn\u00C3\u00A1l.
 report.cim.name                                                    = Continuous Integration
 report.cim.nocim                                                   = No continuous integration management system is defined. Please check back at a later date.
 report.cim.notifiers.column.address                                = C\u00edm
