--- a/src/main/resources/project-info-report_it.properties
+++ b/src/main/resources/project-info-report_it.properties
@@ -24,6 +24,7 @@ report.cim.cruisecontrol.intro                                     = Questo prog
 report.cim.hudson.intro                                            = Questo progetto usa {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Questo progetto usa {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Questo progetto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Questo progetto usa {Travis CI, https://travis-ci.org/}.
 report.dependencies.graph.tables.licenses                          = Licenze
 report.dependencies.graph.tables.unknown                           = Non definita
 report.index.nodescription                                         = Al momento non esiste alcuna descrizione associata a questo progetto.
