--- a/src/main/resources/project-info-report_tr.properties
+++ b/src/main/resources/project-info-report_tr.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Bu proje S\
 report.cim.hudson.intro                                            = This project uses {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = This project uses {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = This project uses {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = S\u00fcrekli Entegrasyon
 report.cim.nocim                                                   = Herhangi bir S\u00fcrekli Entegrasyon Y\u00f6netim Sistemi tan\u00fdmlanmam\u00fd\u00fet\u00fdr. L\u00fctfen ileri bir tarihte tekrar kontrol ediniz.
 report.cim.notifiers.column.address                                = Adres
