--- a/src/main/resources/project-info-report_zh_TW.properties
+++ b/src/main/resources/project-info-report_zh_TW.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = \u672c\u5c0
 report.cim.hudson.intro                                            = \u672c\u5c08\u6848\u4f7f\u7528 {Hudson, http://hudson-ci.org/}\u3002
 report.cim.jenkins.intro                                           = \u672c\u5c08\u6848\u4f7f\u7528 {Jenkins, https://jenkins-ci.org/}\u3002
 report.cim.luntbuild.intro                                         = \u672c\u5c08\u6848\u4f7f\u7528 {Luntbuild, http://luntbuild.javaforge.com/}\u3002
+report.cim.travis.intro                                            = \u672c\u5c08\u6848\u4f7f\u7528 {Travis CI, https://travis-ci.org/}\u3002
 report.cim.name                                                    = \u6301\u7e8c\u6574\u5408 (Continuous Integration)
 report.cim.nocim                                                   = \u672c\u5c08\u6848\u672a\u5b9a\u7fa9\u6301\u7e8c\u6574\u5408\u7ba1\u7406\u7cfb\u7d71 (Continuous Integration System)\u3002\u8acb\u7a0d\u5f8c\u518d\u67e5\u770b\u3002
 report.cim.notifiers.column.address                                = \u5730\u5740 (Address)
