--- a/src/main/resources/project-info-report_cs.properties
+++ b/src/main/resources/project-info-report_cs.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Tento proje
 report.cim.hudson.intro                                            = Tento projekt pou\u017e\u00edv\u00e1 {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Tento projekt pou\u017e\u00edv\u00e1 {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Tento projekt pou\u017e\u00edv\u00e1 {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Tento projekt pou\u017e\u00edv\u00e1 {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Nep\u0159etr\u017eit\u00e1 integrace
 report.cim.nocim                                                   = Projekt nem\u00e1 stanoven\u00fd \u017e\u00e1dn\u00fd syst\u00e9m nep\u0159etr\u017eit\u00e9 integrace. Zkuste se pod\u00edvat pozd\u011bji.
 report.cim.notifiers.column.address                                = Adresa
