--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Ce projet u
 report.cim.hudson.intro                                            = Ce projet utilise {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Ce projet utilise {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Ce projet utilise {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Ce projet utilise {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Int\u00e9gration continue
 report.cim.nocim                                                   = Aucun syst\u00e8me d'int\u00e9gration continue n'est d\u00e9fini. V\u00e9rifiez plus tard si un syst\u00e8me d'int\u00e9gration continue a \u00e9t\u00e9 ajout\u00e9.
 report.cim.notifiers.column.address                                = Adresse
