--- a/src/main/resources/project-info-report_ja.properties
+++ b/src/main/resources/project-info-report_ja.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = \u3053\u306
 report.cim.hudson.intro                                            = \u3053\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306F {Hudson, http://hudson-ci.org/} \u3092\u4F7F\u7528\u3057\u3066\u3044\u307E\u3059\u3002
 report.cim.jenkins.intro                                           = \u3053\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306F {Jenkins, https://jenkins-ci.org/} \u3092\u4F7F\u7528\u3057\u3066\u3044\u307E\u3059\u3002
 report.cim.luntbuild.intro                                         = \u3053\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306F {Luntbuild, http://luntbuild.javaforge.com/} \u3092\u4F7F\u7528\u3057\u3066\u3044\u307E\u3059\u3002
+report.cim.travis.intro                                            = \u3053\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306F {Travis CI, https://travis-ci.org/} \u3092\u4F7F\u7528\u3057\u3066\u3044\u307E\u3059\u3002
 report.cim.name                                                    = \u7D99\u7D9A\u7684\u7D50\u5408
 report.cim.nocim                                                   = \u7D99\u7D9A\u7684\u7D50\u5408\u7BA1\u7406\u30B7\u30B9\u30C6\u30E0\u306F\u5B9A\u7FA9\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002\u5F8C\u3067\u307E\u305F\u30C1\u30A7\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 report.cim.notifiers.column.address                                = \u30A2\u30C9\u30EC\u30B9
