--- a/src/main/resources/project-info-report_ko.properties
+++ b/src/main/resources/project-info-report_ko.properties
@@ -24,6 +24,7 @@ report.cim.cruisecontrol.intro                                     = \uc774 \ud5
 report.cim.hudson.intro                                            = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Hudson, http://hudson-ci.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.cim.jenkins.intro                                           = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Jenkins, https://jenkins-ci.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.cim.luntbuild.intro                                         = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Luntbuild, http://luntbuild.javaforge.com/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.cim.travis.intro                                            = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Travis CI, https://travis-ci.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.cim.description                                             = \uc774\ub294 \uc815\uae30\uc801\uc73c\ub85c \uc218\ud589\ud558\ub294 \ube4c\ub4dc/\ud14c\uc2a4\ud2b8\uc5d0 \ub300\ud55c \uc5f0\uc18d \ud1b5\ud569 \uacf5\uc815\uc5d0 \ub300\ud55c \ub9c1\ud06c\uc785\ub2c8\ub2e4.
 report.cim.general.intro                                           = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 \uc5f0\uc18d\ud1b5\ud569\uc2dc\uc2a4\ud15c(Continuous Integration System)\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.cim.name                                                    = \uc5f0\uc18d\ud1b5\ud569 (Continuous Integration)
