--- a/src/main/resources/project-info-report_lt.properties
+++ b/src/main/resources/project-info-report_lt.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = \u0160is pr
 report.cim.hudson.intro                                            = \u0160is projektas naudoja {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = \u0160is projektas naudoja {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = \u0160is projektas naudoja {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = \u0160is projektas naudoja {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Testinis integravimas
 report.cim.nocim                                                   = Testinio integravimo sistema nenaudojama. Pabandykit v\u0117liau.
 report.cim.notifiers.column.address                                = Adresas
