--- a/src/main/resources/project-info-report_nl.properties
+++ b/src/main/resources/project-info-report_nl.properties
@@ -25,6 +25,7 @@ report.cim.general.intro                                           = Dit project
 report.cim.hudson.intro                                            = Dit project gebruikt {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Dit project gebruikt {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Dit project gebruikt {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Dit project gebruikt {Travis CI, https://travis-ci.org/}.
 report.dependencies.file.details.columntitle.debuginformation      = Geeft aan of deze afhankelijkheden met debug-informatie gecompileerd zijn.
 report.dependencies.graph.tables.licenses                          = Vergunningen
 report.dependencies.graph.tables.unknown                           =
