--- a/src/main/resources/project-info-report_no.properties
+++ b/src/main/resources/project-info-report_no.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Dette prosj
 report.cim.hudson.intro                                            = Dette prosjektet bruker {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Dette prosjektet bruker {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Dette prosjektet bruker {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Dette prosjektet bruker {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Kontinueriig integrasjon
 report.cim.nocim                                                   = Intet kontinuerlig integrasjons administrasjons system er definert. Vennligst sjekk igjen ved en senere anledning.
 report.cim.notifiers.column.address                                = Adresse
