--- a/src/main/resources/project-info-report_pl.properties
+++ b/src/main/resources/project-info-report_pl.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Projekt ten
 report.cim.hudson.intro                                            = Projekt ten u\u017Cywa systemu {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Projekt ten u\u017Cywa systemu {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Projekt ten u\u017Cywa systemu {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Projekt ten u\u017Cywa systemu {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Continuous Integration
 report.cim.nocim                                                   = Nie zdefiniowano system\u00F3w Continuous Integration dla tego projektu. Prosz\u0119 spr\u00F3bowa\u0107 w p\u00F3\u017Aniejszym terminie.
 report.cim.notifiers.column.address                                = Adres
