--- a/src/main/resources/project-info-report_pt_BR.properties
+++ b/src/main/resources/project-info-report_pt_BR.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Este projet
 report.cim.hudson.intro                                            = Este projeto utiliza o {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Este projeto utiliza o {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Este projeto utiliza o {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Este projeto utiliza o {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Integra\u00e7\u00e3o Cont\u00ednua
 report.cim.nocim                                                   = Nenhum sistema de integra\u00e7\u00e3o cont\u00ednua foi definido. Favor verificar novamente numa data futura.
 report.cim.notifiers.column.address                                = Endere\u00e7o
