--- a/src/main/resources/project-info-report_sk.properties
+++ b/src/main/resources/project-info-report_sk.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Tento proje
 report.cim.hudson.intro                                            = Tento projekt pou\u017e\u00edva {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Tento projekt pou\u017e\u00edva {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Tento projekt pou\u017e\u00edva {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Tento projekt pou\u017e\u00edva {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Syst\u00e9m priebe\u017enej integr\u00e1cie (Continuous Integration)
 report.cim.nocim                                                   = \u017diadny priebe\u017en\u00fd integra\u010dn\u00fd syst\u00e9m nie je definovan\u00fd, pros\u00edm sk\u00faste nesk\u00f4r.
 report.cim.notifiers.column.address                                = Adresa
