--- a/src/main/resources/project-info-report_sv.properties
+++ b/src/main/resources/project-info-report_sv.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = Detta proje
 report.cim.hudson.intro                                            = Detta projekt anv\u00e4nder {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = Detta projekt anv\u00e4nder {Jenkins, https://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = Detta projekt anv\u00e4nder {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = Detta projekt anv\u00e4nder {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Continuous Integration
 report.cim.nocim                                                   = Projektet har inget continuous integration-system definierat. F\u00f6rs\u00f6k igen senare.
 report.cim.notifiers.column.address                                = Adress
