--- a/src/main/resources/project-info-report_zh_CN.properties
+++ b/src/main/resources/project-info-report_zh_CN.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = \u672C\u987
 report.cim.hudson.intro                                            = \u672C\u9879\u76EE\u4F7F\u7528 {Hudson, http://hudson-ci.org/}\u3002
 report.cim.jenkins.intro                                           = \u672C\u9879\u76EE\u4F7F\u7528 {Jenkins, https://jenkins-ci.org/}\u3002
 report.cim.luntbuild.intro                                         = \u672C\u9879\u76EE\u4F7F\u7528 {Luntbuild, http://luntbuild.javaforge.com/}\u3002
+report.cim.travis.intro                                            = \u672C\u9879\u76EE\u4F7F\u7528 {Travis CI, https://travis-ci.org/}\u3002
 report.cim.name                                                    = \u6301\u7EED\u96C6\u6210
 report.cim.nocim                                                   = \u672A\u5B9A\u4E49\u4EFB\u4F55\u6301\u7EED\u96C6\u6210\u7BA1\u7406\u7CFB\u7EDF\uFF0C\u8BF7\u8FC7\u4E00\u6BB5\u65F6\u95F4\u518D\u67E5\u770B\u3002
 report.cim.notifiers.column.address                                = \u5730\u5740
