[MPIR-263] Add parameter 'targetJavaVersion' and inject ${maven.compiler.target}
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1642084 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -194,7 +194,7 @@ report.scm.webaccess.title                                         = Web-Zugang
 report.scm.webaccess.url                                           = Es folgt ein Verweis auf das Web-Portal des Quellcode-Archivs dieses Projektes.
 report.summary.build.artifactid                                    = ArtifactId
 report.summary.build.groupid                                       = GroupId
-report.summary.build.jdk                                           = JDK Rev
+report.summary.build.javaVersion                                   = Java-Version
 report.summary.build.title                                         = Build-Information
 report.summary.build.type                                          = Typ
 report.summary.build.version                                       = Version
